# tinysplat

./: .gitignore  README.md  SPEC.md  convert_colmap_to_json.py  example.py  example_gradient.py  pyproject.toml  render_lena.py  tinysplat_mps.py  train_3d_gaussians_json.py
tests/: __init__.py  download_lena.py  test_gaussian_splat_2d.py  test_gaussian_splat_3d.py
tinysplat/: __init__.py  gaussian_splat_2d.py  gaussian_splat_3d.py  gaussian_splat_3d_core.py  halide_backend.py
tinysplat/backends/: __init__.py  common.py  cpu.py  cuda.py  mps.py  python.py
tinysplat/backends_3d/: __init__.py  common.py  cpu.py  cuda.py  mps.py  projected.py
tinysplat/cpp/: __init__.py  tinysplat_cpu.cpp  tinysplat_cuda.cpp  tinysplat_cuda.cu  tinysplat_cuda_cutlass.cu
tinysplat/cpp/build_manual/: .ninja_deps  .ninja_log  build.ninja
tinysplat/halide/: CMakeLists.txt  Makefile  __init__.py  algorithm.cpp  algorithm.h  pipeline.cpp  pipeline_forward.cpp  schedule_cpu.h  schedule_cuda.h  schedule_metal.h  test_backward.cpp  test_backward_debug.cpp  test_backward_debug2.cpp  test_backward_simple.cpp  test_forward  test_forward.cpp  test_forward_debug.cpp
tinysplat/mps/: __init__.py  tinysplat_mps.mm
